# ROVER_HighLevel

./: README.md
base_station/roar/: CMakeLists.txt  package.xml
base_station/roar/config/: Controllers.yaml
base_station/roar/launch/: display.launch  gazebo.launch  spawn.launch
base_station/roar/meshes/: wheel_lhs_front.STL  wheel_lhs_mid.STL  wheel_lhs_rear.STL  wheel_rhs_front.STL  wheel_rhs_mid.STL  wheel_rhs_rear.STL
base_station/roar/urdf/: roar.csv  roar.urdf  roar2.urdf
base_station/teleoperation/: CMakeLists.txt  package.xml
base_station/teleoperation/launch/: teleoperation.launch
base_station/teleoperation/scripts/: teleoperation_sim.py
localization/: CMakeLists.txt  package.xml
localization/include/: IMU_9DOF.h  OLD_UKF.h  Quaternion.h  ROAR_UKF.h  UKF.h  debugging_helpers.h  math_helpers.h
localization/msg/: imu.msg
localization/scripts/: sensor_subscriber.cpp  synchronizer.cpp  synchronizer.py  synchronizer_T2.cpp  synchronizer_python
localization/src/: FilterOutput.cpp  Quaternion.cpp  ROAR_UKF.cpp  ROAR_main.cpp  ROAR_main_simulation.cpp  UKF.cpp  attitude_estimation.ino  custom_msg.cpp  math_helpers.cpp  publisher.cpp  simulation_testing.cpp  ukf.cpp
navigation/: package.xml
navigation/scripts/: pure_pursuit.py
ros_can/roscan/src/: roscan_converter.py
